--- a/frontend/src/styles/ShowReview.css
+++ b/frontend/src/styles/ShowReview.css
@@ -26,7 +26,6 @@ body {
 }
 
 .review-image {
-
   margin-right: 60px;
   margin-top: 30px;
   width: 10%;
@@ -75,22 +74,11 @@ body {
   display: flex;
   justify-content: flex-end;
   padding-right: 150px;
+  background-color: blue;
 }
 
-.restaurant-logo > img {
-  max-width: 800px;
-}
-
-/* .restaurant-logo {
-  position: absolute;
-  margin-left: 50vw;
-  display: flex;
-  justify-content: flex-end;
-  padding-right: 150px;
-}
-
-.restaurant-logo > img {
-  max-width: 800px;
+/* .restaurant-logo > img {
+  max-width: 100px;
 } */
 
 .comments-grid,
