--- a/frontend/src/styles/SignUpPage.module.css
+++ b/frontend/src/styles/SignUpPage.module.css
@@ -43,8 +43,8 @@
 }
 
 .tasteucla_logo {
-  width: 175px;
-  margin-top: 70px;
+  width: 25vh;
+  margin-top: 75px;
 }
 
 .error_message {
@@ -175,7 +175,7 @@
   text-align: center;
   margin-left: auto;
   margin-right: auto;
-  top: 83.7%;
+  top: 84%;
   width: min-content;
   height: min-content;
   white-space: nowrap;
@@ -185,11 +185,12 @@
   position: absolute;
   margin-left: auto;
   margin-right: auto;
-  top: 83.5%;
+  top: 83.3%;
   width: min-content;
   height: 5%;
   outline: solid 1px #9747ff;
   outline-offset: 0px;
+  height: 40px;
 }
 
 .back {
@@ -204,7 +205,7 @@
   text-align: center;
   margin-left: auto;
   margin-right: auto;
-  top: 92.5%;
+  top: 92%;
   width: min-content;
   height: min-content;
   white-space: nowrap;
@@ -214,9 +215,10 @@
   position: absolute;
   margin-left: auto;
   margin-right: auto;
-  top: 92%;
+  top: 91.2%;
   width: min-content;
   height: 5%;
   outline: solid 1px #9747ff;
   outline-offset: 0px;
+  height: 40px;
 }
